---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : string(256)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..18: invalid character count size
| error for src/main.t:15..18: computed count is 256
| info: valid sizes are between 1 to 255
